--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-seaborn==0.10.1
+pandas==1.0.4
 matplotlib==3.2.1
+numpy==1.18.5
+seaborn==0.10.1
 streamlit==0.63.1
 altair==4.1.0
-pandas==1.0.4
 scikit_learn==0.23.2
